--- a/Pages/badges/Edit.cshtml
+++ b/Pages/badges/Edit.cshtml
@@ -32,7 +32,7 @@
             <div class="form-group">
                 <label asp-for="Badge.BadgeType" class="control-label"></label>
                 <select class="form-control" name="badgeTypeId"
-                    asp-items="@(new SelectList(Model.BadgeTypes, "Id", "Name"))"></select>
+                    asp-items="@(new SelectList(Model.BadgeTypes, "Id", "Name", Model.SelectedBadgeTypeId))"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
