--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/MyBadges">My Badges</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/badges/Create">Create a Badge</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/badges/Index">All Badges</a>
                         </li>
                     </ul>
