--- a/Pages/badges/Award.cshtml
+++ b/Pages/badges/Award.cshtml
@@ -5,32 +5,34 @@
 
 <p>You can award any of your badges (earned or created) to other users. Don't worry, you never lose a badge!</p>
 
-
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title">@Model.BadgeToAward.Name</h5>
-    <p class="card-text">@Model.BadgeToAward.Description</p>
-  </div>
-</div>
-
 <form method="post">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="@Model.BadgeToAward.Id" />
 
-    <div class="form-check" style="margin-top: 20px; margin-bottom: 20px;">
-      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-      <label class="form-check-label" for="flexCheckDefault">
-        I have read the criteria required to award this badge, and the recipient meets the requirements.
-      </label>
+    <div class="form-group">
+        <label>Badge Details:</label> 
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">@Model.BadgeToAward.Name</h5>
+            <p class="card-text">@Model.BadgeToAward.Description</p>
+          </div>
+        </div>
     </div>
 
-
-    <div class="input-group" style="width: 30rem;">
-        <select class="form-select" name="selectedUserId"
+    <div class="form-group">
+        <label asp-for="SelectedUserId" class="control-label">
+            User to award this badge to:
+        </label>
+        <select class="form-select" name="selectedUserId" style="width: 30rem;"
+            asp-for="SelectedUserId"
             asp-items="@(new SelectList(Model.AllUsers, "Id", "Alias"))">
-          
         </select>
-        <input type="submit" value="Award"
-            class="btn btn-primary" />
     </div>
 
+    <div class="form-group">
+        <div class="alert alert-primary" role="alert">
+            Please ensure that the user you are awarding this badge to has meet the required criteria.
+        </div>
+        <input type="submit" value="Award" class="btn btn-primary" />
+    </div>
 </form>
