--- a/Pages/badges/Create.cshtml
+++ b/Pages/badges/Create.cshtml
@@ -30,18 +30,14 @@
             </div>
             <div class="form-group">
                 <label asp-for="Badge.BadgeType" class="control-label"></label>
-                <select asp-for="Badge.BadgeType" class="form-control"></select>
-                <span asp-validation-for="Badge.BadgeType" class="text-danger"></span>
+                <select class="form-control" name="badgeTypeId"
+                    asp-items="@(new SelectList(Model.BadgeTypes, "Id", "Name"))"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-page="Index">Back to List</a>
 </div>
 
 @section Scripts {
