--- a/Pages/badges/Edit.cshtml
+++ b/Pages/badges/Edit.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form enctype="multipart/form-data" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Badge.Id" />
             <div class="form-group">
@@ -33,6 +33,11 @@
                 <label asp-for="Badge.BadgeType" class="control-label"></label>
                 <select class="form-control" name="badgeTypeId"
                     asp-items="@(new SelectList(Model.BadgeTypes, "Id", "Name", Model.SelectedBadgeTypeId))"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="badgeImage" class="control-label">Upload new banner image:</label>
+                <input type="file" asp-for="badgeImage" accept="image/*" value="" />
+                <span asp-validation-for="badgeImage" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
