--- a/Pages/badges/Edit.cshtml
+++ b/Pages/badges/Edit.cshtml
@@ -36,7 +36,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="badgeImage" class="control-label">Upload new banner image:</label>
-                <input type="file" asp-for="badgeImage" accept="image/*" value="" />
+                <input type="file" asp-for="badgeImage" accept="image/*" />
                 <span asp-validation-for="badgeImage" class="text-danger"></span>
             </div>
             <div class="form-group">
