--- a/Pages/badges/Edit.cshtml
+++ b/Pages/badges/Edit.cshtml
@@ -21,12 +21,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Badge.Criteria" class="control-label"></label>
-                <input asp-for="Badge.Criteria" class="form-control" />
+                <textarea asp-for="Badge.Criteria" class="form-control"></textarea>
                 <span asp-validation-for="Badge.Criteria" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Badge.Description" class="control-label"></label>
-                <input asp-for="Badge.Description" class="form-control" />
+                <textarea asp-for="Badge.Description" class="form-control"></textarea>
                 <span asp-validation-for="Badge.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
