--- a/Pages/badges/Award.cshtml
+++ b/Pages/badges/Award.cshtml
@@ -25,7 +25,7 @@
         </label>
         <select class="form-select" name="selectedUserId" style="width: 30rem;"
             asp-for="SelectedUserId"
-            asp-items="@(new SelectList(Model.AllUsers, "Id", "Alias"))">
+            asp-items="@(new SelectList(Model.AllUsers, "PrincipalId", "PrincipalName"))">
         </select>
     </div>
 
