--- a/Pages/badges/Create.cshtml
+++ b/Pages/badges/Create.cshtml
@@ -19,22 +19,12 @@
                 <span asp-validation-for="Badge.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Badge.Criteria" class="control-label"></label>
-                <input asp-for="Badge.Criteria" class="form-control" />
-                <span asp-validation-for="Badge.Criteria" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Badge.Description" class="control-label"></label>
-                <input asp-for="Badge.Description" class="form-control" />
-                <span asp-validation-for="Badge.Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Badge.BadgeType" class="control-label"></label>
                 <select class="form-control" name="badgeTypeId"
                     asp-items="@(new SelectList(Model.BadgeTypes, "Id", "Name"))"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Next >" class="btn btn-primary" />
             </div>
         </form>
     </div>
