Remove copyright and privacy link

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - BadgeMeUp - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            Thank you for using BadgeMeUp! Hope you're having fun. A gold stars v2 experiment by lalovi and jayoung.
         </div>
     </footer>
 
