--- a/Pages/WhoAmI.cshtml
+++ b/Pages/WhoAmI.cshtml
@@ -7,4 +7,9 @@
 <p>
     Name: @Model.Name
     <br /> Principal ID: @Model.PrincipalId
+    <br />
+    @foreach(var header in @Model.Headers)
+    {
+        <div>@header.Key: @header.Value</div>
+    }
 </p>
