--- a/Pages/badges/Edit.cshtml
+++ b/Pages/badges/Edit.cshtml
@@ -31,7 +31,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Badge.BadgeType" class="control-label"></label>
-                <select class="form-control" name="badgeTypeId"
+                <select class="form-select" name="badgeTypeId"
                     asp-items="@(new SelectList(Model.BadgeTypes, "Id", "Name", Model.SelectedBadgeTypeId))"></select>
             </div>
             <div class="form-group">
