--- a/Pages/badges/Create.cshtml
+++ b/Pages/badges/Create.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Badge.BadgeType" class="control-label"></label>
-                <select class="form-control" name="badgeTypeId"
+                <select class="form-select" name="badgeTypeId"
                     asp-items="@(new SelectList(Model.BadgeTypes, "Id", "Name"))"></select>
             </div>
             <div class="form-group">
