Trying a share page to replace the complex award page

--- a/Pages/MyBadges.cshtml
+++ b/Pages/MyBadges.cshtml
@@ -23,7 +23,7 @@
                 </p>
                 
                 <a asp-page="badges/Edit" asp-route-id="@assignedBadge.Badge.Id">Details</a> |
-                <a asp-page="badges/Award" asp-route-id="@assignedBadge.Badge.Id">Award to Someone</a>
+                <a asp-page="badges/Share" asp-route-id="@assignedBadge.Badge.Id">Share</a>
             </div>
         </div>
     </div>
