Better URLs, ability to view someone elses badges

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -24,13 +24,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/MyBadges">My Badges</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/badges/Index">My Badges</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/badges/Create">Create a Badge</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/badges/Index">All Badges</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/badges/All">All Badges</a>
                         </li>
                     </ul>
                 </div>
