--- a/Pages/badges/Index.cshtml
+++ b/Pages/badges/Index.cshtml
@@ -1,7 +1,5 @@
 ﻿@page
 @model BadgeMeUp.Pages.Badges.IndexModel
-@{
-}
 
 @if (@Model.OtherUser == null)
 {
@@ -21,19 +19,7 @@ else
     <div class="row">
 @foreach(var assignedBadge in Model.AssignedBadges)
 {   <div class="col">
-        <div class="card" style="width: 252px; margin-bottom: 10px;">
-            <h5 class="card-title" style="margin-left: 5px; height: 45px;">@assignedBadge.Badge.Name</h5>
-            <img src="~/BadgeImage?id=@assignedBadge.Badge.Id" class="card-img-top" style="height: 100px; width: 250px;" />
-        
-            <div class="card-body">
-                <p style="font-size: 10pt;">
-                    @Html.Raw(Badges.IndexModel.EncodeMultilineString(assignedBadge.Badge.Description))
-                </p>
-                
-                <a asp-page="Edit" asp-route-id="@assignedBadge.Badge.Id">Details</a> |
-                <a asp-page="Share" asp-route-id="@assignedBadge.Badge.Id">Share</a>
-            </div>
-        </div>
+        <partial name="BadgeWidget" model="@new BadgeMeUp.Pages.Shared.BadgeWidget(assignedBadge.Badge, true)" />
     </div>
 }
     </div>
