--- a/Pages/badges/Edit.cshtml
+++ b/Pages/badges/Edit.cshtml
@@ -17,15 +17,15 @@
                 <span asp-validation-for="Badge.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Badge.Criteria" class="control-label"></label>
-                <textarea asp-for="Badge.Criteria" class="form-control"></textarea>
-                <span asp-validation-for="Badge.Criteria" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Badge.Description" class="control-label"></label>
                 <textarea asp-for="Badge.Description" class="form-control"></textarea>
                 <span asp-validation-for="Badge.Description" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Badge.Criteria" class="control-label">Optional Criteria</label>
+                <textarea asp-for="Badge.Criteria" class="form-control"></textarea>
+                <span asp-validation-for="Badge.Criteria" class="text-danger"></span>
+            </div>            
             <div class="form-group">
                 <label asp-for="Badge.BadgeType" class="control-label"></label>
                 <select class="form-select" name="badgeTypeId"
