--- a/Pages/badges/Receive.cshtml
+++ b/Pages/badges/Receive.cshtml
@@ -6,7 +6,7 @@
 <form method="post">
     <div class="mb-3">
         <p>
-            Congratulations! @Model.FromUser.PrincipalName sent you a badge. All you need
+            Congratulations! <b>Model.FromUser.PrincipalName</b> sent you a badge. All you need
             to do is accept it.
         </p>
         
