--- a/Pages/badges/Edit.cshtml
+++ b/Pages/badges/Edit.cshtml
@@ -32,7 +32,7 @@
                     asp-items="@(new SelectList(Model.BadgeTypes, "Id", "Name", Model.SelectedBadgeTypeId))"></select>
             </div>
             <div class="form-group">
-                <label asp-for="badgeImage" class="control-label">Upload new banner image (100px x 250px or equal ratio):</label>
+                <label asp-for="badgeImage" class="control-label">Upload new banner image (250w x 100h or equal ratio is ideal):</label>
                 <input type="file" asp-for="badgeImage" accept="image/*" />
                 <span asp-validation-for="badgeImage" class="text-danger"></span>
             </div>
