--- a/Pages/badges/Edit.cshtml
+++ b/Pages/badges/Edit.cshtml
@@ -64,7 +64,7 @@
                         {
                             <td>@assignment.FromUser.PrincipalName</td>
                         }
-                        <td>@assignment.User.PrincipalName</td>
+                        <td><a asp-page="Index" asp-route-id="@assignment.User.PrincipalId">@assignment.User.PrincipalName</a></td>
                         <td>@assignment.AwardComment</td>
                     }
             </tr>
