Slightly better looking badge award history

--- a/Pages/badges/Edit.cshtml
+++ b/Pages/badges/Edit.cshtml
@@ -43,7 +43,7 @@
     </div>
     <div class="col">
         <h2>History</h2>
-        <table class="table table-bordered">
+        <table class="table">
             <thead>
                 <tr>
                     <td>From</td>
