Masonry layout for badges

--- a/Pages/Shared/BadgeWidget.cshtml
+++ b/Pages/Shared/BadgeWidget.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BadgeMeUp.Pages.Shared.BadgeWidget
 
-        <div class="card" style="width: 14rem; min-height: 300px; max-width: 200px;">
+        <div class="card">
             <img src="~/BadgeImage?id=@Model.Badge.Id" class="card-img-top" />
         
             <div class="card-body">
