--- a/Pages/badges/Receive.cshtml
+++ b/Pages/badges/Receive.cshtml
@@ -10,7 +10,9 @@
             to do is accept it.
         </p>
         
-        <partial name="BadgeWidget" model="@new BadgeMeUp.Pages.Shared.BadgeWidget(Model.Badge, false)" />
+        <div style="width: 14rem;">
+            <partial name="BadgeWidget" model="@new BadgeMeUp.Pages.Shared.BadgeWidget(Model.Badge, false)" />
+        </div>
         
         @if(Model.AwardMessage != null)
         {
