Added titles to pages missing titles

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -2,7 +2,7 @@
 @using Humanizer
 @model IndexModel
 @{
-    ViewData["Title"] = "Welcome";
+    ViewData["Title"] = "Badge Stream";
 }
 
 <div class="text-center">
