Fix error due to missing namespace

--- a/Pages/Shared/BadgeWidget.cshtml
+++ b/Pages/Shared/BadgeWidget.cshtml
@@ -6,7 +6,7 @@
             <div class="card-body">
                 <h5 class="card-title">@Model.Badge.Name</h5>
                 <p class="card-text">
-                    @Html.Raw(Badges.IndexModel.EncodeMultilineString(@Model.Badge.Description))
+                    @Html.Raw(BadgeMeUp.Pages.Badges.IndexModel.EncodeMultilineString(@Model.Badge.Description))
                 </p>
                 
 
