--- a/Pages/badges/Edit.cshtml
+++ b/Pages/badges/Edit.cshtml
@@ -38,6 +38,7 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Update" class="btn btn-primary" />
+                <a asp-page="./Delete" asp-route-id="@Model.Badge.Id" class="btn btn-danger">Delete</a>
             </div>
         </form>
     </div>
