--- a/Pages/badges/DeleteShare.cshtml
+++ b/Pages/badges/DeleteShare.cshtml
@@ -43,7 +43,7 @@
     
     <form method="post">
         <input type="hidden" asp-for="AssignedBadge.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger btn-sm" /> |
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
 </div>
