--- a/Pages/badges/Edit.cshtml
+++ b/Pages/badges/Edit.cshtml
@@ -70,7 +70,7 @@
                         }
                         <td><a asp-page="Index" asp-route-id="@assignment.User.PrincipalId">@assignment.User.PrincipalName</a></td>
                         <td>@assignment.AwardComment</td>
-                        <td><a asp-page="./DeleteShare" asp-route-id="@assignment.Id" class="btn btn-danger">Delete</a></td>
+                        <td><a asp-page="./DeleteShare" asp-route-id="@assignment.Id" class="btn btn-danger btn-sm">Delete</a></td>
                     }
             </tr>
             }
