--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/badges/All">All Badges</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/leaderboard">Leaderboards</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/about">About</a>
                         </li>
                     </ul>
