--- a/Pages/Leaderboard.cshtml
+++ b/Pages/Leaderboard.cshtml
@@ -3,21 +3,47 @@
 @{
 }
 
-
-<table class="table">
-    <thead>
-        <tr>
-            <td>User</td>
-            <td>Badges</td>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach(var record in @Model.TopUsers)
-        {
-            <tr>
-                <td><a asp-page="badges/Index" asp-route-id="@record.Item1.PrincipalId">@record.Item1.PrincipalName</a></td>
-                <td>@record.Item2</td>
-            </tr>
-        }
-    </tbody>
-</table>
+<div class="row">
+    <div class="col">
+        <h5>Received</h5>
+        <table class="table">
+            <thead>
+                <tr>
+                    <td>User</td>
+                    <td>Badges</td>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach(var record in @Model.TopUsers)
+                {
+                    <tr>
+                        <td><a asp-page="badges/Index" asp-route-id="@record.Item1.PrincipalId">@record.Item1.PrincipalName</a></td>
+                        <td>@record.Item2</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+    <div class="col">
+    <div class="col">
+        <h5>Given</h5>
+        <table class="table">
+            <thead>
+                <tr>
+                    <td>User</td>
+                    <td>Badges</td>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach(var record in @Model.TopGivers)
+                {
+                    <tr>
+                        <td><a asp-page="badges/Index" asp-route-id="@record.Item1.PrincipalId">@record.Item1.PrincipalName</a></td>
+                        <td>@record.Item2</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+    </div>
+</div>
