--- a/Pages/Leaderboard.cshtml
+++ b/Pages/Leaderboard.cshtml
@@ -35,7 +35,7 @@
                 <tr>
                     <td>Place</td>
                     <td>User</td>
-                    <td>Badges</td>
+                    <td>Awarded</td>
                 </tr>
             </thead>
             <tbody>
