--- a/Pages/badges/Delete.cshtml
+++ b/Pages/badges/Delete.cshtml
@@ -2,15 +2,11 @@
 @model BadgeMeUp.Pages.Badges.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Badge";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this badge?</h3>
 <div>
-    <h4>Badge</h4>
-    <hr />
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Badge.Name)
@@ -34,13 +30,12 @@
             @Html.DisplayNameFor(model => model.Badge.BadgeType)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Badge.BadgeType)
+            @Html.DisplayFor(model => model.Badge.BadgeType.Name)
         </dd>
     </dl>
     
     <form method="post">
         <input type="hidden" asp-for="Badge.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />
     </form>
 </div>
