Fixed stats page bugs

--- a/Pages/stats.cshtml
+++ b/Pages/stats.cshtml
@@ -15,7 +15,7 @@
                 <td>@Model.NumberOfBadges</td>
             </tr>
             <tr>
-                <td>Number of users</td>
+                <td>Number of badge assignments</td>
                 <td>@Model.NumberOfBadgeAssignments</td>
             </tr>
         </table>
