--- a/Pages/Shared/_Layout.cshtml.css
+++ b/Pages/Shared/_Layout.cshtml.css
@@ -1,6 +1,15 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+#logo {
+  height: 50px;
+  width: auto;
+}
+
+.bg-bmu-dark {
+  background-color: #00354c;
+}
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
