--- a/Pages/badges/Share.cshtml
+++ b/Pages/badges/Share.cshtml
@@ -8,7 +8,7 @@
     <label>Badge Details:</label>
 
     <div style="width: 14rem;">
-        <partial name="BadgeWidget" model="@new BadgeMeUp.Pages.Shared.BadgeWidget(Model.BadgeToAward, false)" />
+        <partial name="BadgeWidget" model="@(new BadgeMeUp.Pages.Shared.BadgeWidget(Model.BadgeToAward, false))" />
     </div>
 </div>
 <div class="mb-3">
