--- a/Pages/Shared/_Layout.cshtml.css
+++ b/Pages/Shared/_Layout.cshtml.css
@@ -6,8 +6,10 @@ for details on configuring this project to bundle and minify static web assets. 
   width: auto;
 }
 
-.bg-bmu-dark {
-  background-color: #00354c;
+h1, h2, h3, h4, h5, h6 {
+  font-family: eds-market-main-script,sans-serif !important;
+  font-weight: 400 !important;
+  font-style: normal !important;
 }
 
 a.navbar-brand {
